--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,9 +35,9 @@ Collate:
     'run_fixed_mcmc.R'
     'effectiveSampleSize.R'
     'estimates.R'
-    'generate_data.R'
     'run_gelman_mcmc.R'
-    'heterosis.R'
+    'fbseq.R'
+    'generate_data.R'
     'namespace.R'
     's4list.R'
     'starts.R'
