--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(disperse_starts)
 export(dispersed_set)
 export(effectiveSampleSize)
 export(estimates)
+export(fbseq)
 export(fill_easy_gaps)
 export(flatten)
 export(flatten_chain)
@@ -20,8 +21,7 @@ export(flatten_starts)
 export(generate_data)
 export(getDevice)
 export(getDeviceCount)
-export(heterosis)
-export(hyperparameters)
+export(get_nonzeros)
 export(make_vignette_data)
 export(nu_tau)
 export(parameters)
