--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fbseq
 Title: fbseq
-Description: A Markov chain Monte Carlo method for analyzing RNA-seq data
+Description: A Markov chain Monte Carlo method for analyzing RNA-seq data.
 URL: https://github.com/wlandau/fbseq
 Version: 0.0
 Author: Will Landau <will.landau@gmail.com>
