--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(Configs)
 export(Starts)
 export(alternate_priors)
 export(calc_gelman)
-export(check_heterosisCUDA)
+export(check_fbseqCUDA)
 export(concatenate)
 export(credible_intervals)
 export(disperse_starts)
