--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,16 +28,16 @@ Collate:
     'concatenate.R'
     'parameters.R'
     'configs.R'
-    'flatten.R'
-    'credible_intervals.R'
     'cuda_usage.R'
     'data.R'
     'run_fixed_mcmc.R'
     'effectiveSampleSize.R'
+    'flatten.R'
     'estimates.R'
     'run_gelman_mcmc.R'
     'fbseq.R'
     'generate_data.R'
+    'inference.R'
     'namespace.R'
     's4list.R'
     'starts.R'
