--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,12 @@
 
 export(Chain)
 export(Configs)
+export(Inference)
 export(Starts)
 export(alternate_priors)
 export(calc_gelman)
 export(check_fbseqCUDA)
 export(concatenate)
-export(credible_intervals)
 export(disperse_starts)
 export(dispersed_set)
 export(effectiveSampleSize)
@@ -33,6 +33,7 @@ export(setDevice)
 export(simple_starts)
 exportClasses(Chain)
 exportClasses(Configs)
+exportClasses(Inference)
 exportClasses(Starts)
 import(coda)
 import(methods)
