--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(Starts)
 export(alternate_priors)
 export(calc_gelman)
 export(check_fbseqCUDA)
+export(check_inference)
 export(concatenate)
 export(disperse_starts)
 export(dispersed_set)
