--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,12 @@
 
 export(Chain)
 export(Configs)
-export(Inference)
+export(Scenario)
 export(Starts)
 export(alternate_priors)
 export(calc_gelman)
 export(check_fbseqCUDA)
-export(check_inference)
+export(check_scenario)
 export(concatenate)
 export(disperse_starts)
 export(dispersed_set)
@@ -34,7 +34,7 @@ export(setDevice)
 export(simple_starts)
 exportClasses(Chain)
 exportClasses(Configs)
-exportClasses(Inference)
+exportClasses(Scenario)
 exportClasses(Starts)
 import(coda)
 import(methods)
