--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(flatten_chain)
 export(flatten_post)
 export(flatten_starts)
 export(generate_data)
+export(generate_starts)
 export(getDevice)
 export(getDeviceCount)
 export(get_nonzeros)
@@ -27,11 +28,11 @@ export(make_vignette_data)
 export(nu_tau)
 export(parameters)
 export(plug_in_chain)
+export(probs)
 export(run_fixed_mcmc)
 export(run_gelman_mcmc)
 export(s4list)
 export(setDevice)
-export(simple_starts)
 exportClasses(Chain)
 exportClasses(Configs)
 exportClasses(Scenario)
