--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ export(flatten)
 export(flatten_chain)
 export(flatten_post)
 export(flatten_starts)
-export(generate_data)
+export(generate_data_from_model)
 export(generate_starts)
 export(getDevice)
 export(getDeviceCount)
@@ -32,6 +32,7 @@ export(probs)
 export(run_fixed_mcmc)
 export(run_gelman_mcmc)
 export(s4list)
+export(scenario_heterosis_model)
 export(setDevice)
 exportClasses(Chain)
 exportClasses(Configs)
