fixed shallow copy problem

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(calc_gelman)
 export(check_fbseqCUDA)
 export(check_scenario)
 export(concatenate)
+export(contstants)
 export(disperse_starts)
 export(dispersed_set)
 export(effectiveSampleSize)
