effect size generalizations

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,8 +32,9 @@ Collate:
     'cuda_usage.R'
     'scenario_heterosis_model.R'
     'data.R'
+    'effect_sizes.R'
     'run_fixed_mcmc.R'
-    'effectiveSampleSize.R'
+    'effective_sample_size.R'
     'flatten.R'
     'estimates.R'
     'run_gelman_mcmc.R'
