--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,8 @@ export(concatenate)
 export(constants)
 export(disperse_starts)
 export(dispersed_set)
-export(effectiveSampleSize)
+export(effect_sizes)
+export(effective_sample_size)
 export(estimates)
 export(fbseq)
 export(fill_easy_gaps)
