--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,15 +36,12 @@ export(run_gelman_mcmc)
 export(s4list)
 export(scenario_heterosis_model)
 export(setDevice)
+export(volcano)
 exportClasses(Chain)
 exportClasses(Configs)
 exportClasses(Scenario)
 exportClasses(Starts)
 import(coda)
+import(ggplot2)
 import(methods)
-importFrom(MASS,glm.nb)
-importFrom(R.utils,capitalize)
-importFrom(parallel,detectCores)
-importFrom(parallel,mclapply)
-importFrom(plyr,aaply)
-importFrom(pracma,trapz)
+importFrom(reshape2,melt)
