--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(constants)
 export(disperse_starts)
 export(dispersed_set)
 export(effect_sizes)
-export(effective_sample_size)
+export(ess_criterion)
 export(estimates)
 export(fbseq)
 export(fill_easy_gaps)
