vignette and scenario_heterosis_model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(flatten)
 export(flatten_chain)
 export(flatten_post)
 export(flatten_starts)
+export(gelman_attempt)
 export(generate_data_from_model)
 export(generate_starts)
 export(getDevice)
