--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,8 @@ VignetteBuilder: knitr
 License: GPL (>= 3)
 Collate:
     'alternate_priors.R'
+    'flatten.R'
+    'calc_gelman.R'
     'starts.R'
     'chain.R'
     'generate_starts.R'
@@ -31,10 +33,10 @@ Collate:
     'effect_sizes.R'
     'run_fixed_mcmc.R'
     'ess_criterion.R'
-    'flatten.R'
     'estimates.R'
     'run_gelman_mcmc.R'
     'fbseq.R'
+    'gelman_attempt.R'
     'scenario.R'
     'generate_data_from_model.R'
     'namespace.R'
