--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(Chain)
 export(Configs)
 export(Scenario)
 export(Starts)
-export(alternate_priors)
 export(calc_gelman)
 export(check_fbseqCUDA)
 export(check_scenario)
@@ -36,6 +35,7 @@ export(run_gelman_mcmc)
 export(s4list)
 export(scenario_heterosis_model)
 export(setDevice)
+export(special_beta_priors)
 export(volcano)
 exportClasses(Chain)
 exportClasses(Configs)
