simplifications to interface

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,18 +25,16 @@ Collate:
     'special_beta_priors.R'
     'generate_starts.R'
     'chain_constructor.R'
-    'concatenate.R'
     'parameters.R'
     'configs.R'
     'cuda_usage.R'
     'data.R'
     'effect_sizes.R'
-    'run_fixed_mcmc.R'
-    'ess_criterion.R'
     'estimates.R'
+    'run_fixed_mcmc.R'
+    'psrf.R'
     'run_gelman_mcmc.R'
     'fbseq.R'
-    'gelman_attempt.R'
     'scenario.R'
     'generate_data_from_model.R'
     'namespace.R'
