--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,10 @@ export(Starts)
 export(calc_gelman)
 export(check_fbseqCUDA)
 export(check_scenario)
-export(concatenate)
 export(constants)
 export(disperse_starts)
 export(dispersed_set)
 export(effect_sizes)
-export(ess_criterion)
 export(estimates)
 export(fbseq)
 export(fill_easy_gaps)
@@ -20,7 +18,6 @@ export(flatten)
 export(flatten_chain)
 export(flatten_post)
 export(flatten_starts)
-export(gelman_attempt)
 export(generate_data_from_model)
 export(generate_starts)
 export(getDevice)
@@ -30,6 +27,7 @@ export(nu_tau)
 export(parameters)
 export(plug_in_chain)
 export(probs)
+export(psrf)
 export(run_fixed_mcmc)
 export(run_gelman_mcmc)
 export(s4list)
