--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,6 @@ Suggests:
 VignetteBuilder: knitr
 License: GPL (>= 3)
 Collate:
-    'flatten.R'
-    'calc_gelman.R'
     'starts.R'
     'chain.R'
     'special_beta_priors.R'
@@ -30,15 +28,17 @@ Collate:
     'cuda_usage.R'
     'data.R'
     'effect_sizes.R'
+    'flatten.R'
     'estimates.R'
-    'run_fixed_mcmc.R'
-    'psrf.R'
-    'run_gelman_mcmc.R'
+    'single_mcmc.R'
     'fbseq.R'
     'scenario.R'
     'generate_data_from_model.R'
+    'mcmc_samples.R'
     'namespace.R'
     'probs.R'
+    'psrf_all.R'
+    'psrf.R'
     's4list.R'
     'scenario_heterosis_model.R'
     'volcano.R'
