--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(Chain)
 export(Configs)
 export(Scenario)
 export(Starts)
-export(calc_gelman)
 export(check_fbseqCUDA)
 export(check_scenario)
 export(constants)
@@ -23,16 +22,17 @@ export(generate_starts)
 export(getDevice)
 export(getDeviceCount)
 export(get_nonzeros)
+export(mcmc_samples)
 export(nu_tau)
 export(parameters)
 export(plug_in_chain)
 export(probs)
 export(psrf)
-export(run_fixed_mcmc)
-export(run_gelman_mcmc)
+export(psrf_all)
 export(s4list)
 export(scenario_heterosis_model)
 export(setDevice)
+export(single_mcmc)
 export(special_beta_priors)
 export(volcano)
 exportClasses(Chain)
