--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(nu_tau)
 export(parameters)
 export(plug_in_chain)
 export(probs)
+export(probs_single)
 export(psrf)
 export(psrf_all)
 export(s4list)
