--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(Chain)
 export(Configs)
+export(Samplers)
 export(Scenario)
 export(Starts)
 export(check_fbseqCUDA)
@@ -31,6 +32,7 @@ export(probs_single)
 export(psrf)
 export(psrf_all)
 export(s4list)
+export(sampler_options)
 export(scenario_heterosis_model)
 export(setDevice)
 export(single_mcmc)
@@ -38,6 +40,7 @@ export(special_beta_priors)
 export(volcano)
 exportClasses(Chain)
 exportClasses(Configs)
+exportClasses(Samplers)
 exportClasses(Scenario)
 exportClasses(Starts)
 import(coda)
