--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Chain)
 export(Configs)
 export(Scenario)
 export(Starts)
+export(assign_samplers)
 export(check_fbseqCUDA)
 export(check_scenario)
 export(constants)
