--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(Configs)
 export(Scenario)
 export(Starts)
 export(assign_samplers)
-export(check_fbseqCUDA)
+export(check_backend)
 export(check_scenario)
 export(constants)
 export(disperse_starts)
