Parallelism for serial version
Distribute additional chains (after pilot chain) across
forked parallel processes using the "processes" argument
of fbsewq

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,4 +43,5 @@ exportClasses(Starts)
 import(coda)
 import(methods)
 importFrom(actuar,qinvgamma)
+importFrom(parallel,mclapply)
 importFrom(reshape2,melt)
