Implement contrast_estimates()
It's a function for computing means, standard deviations,
and credible intervals on contrasts. Tested for OpenMP and
CUDA backends with testthat.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
 Suggests:
     fbseqCUDA,
     fbseqOpenMP,
-    knitr
+    knitr,
+    testthat
 VignetteBuilder: knitr
 License: GPL (>= 3)
 Collate:
@@ -31,6 +32,7 @@ Collate:
     'check_fbseq_input.R'
     'parameters.R'
     'configs.R'
+    'contrast_estimates.R'
     'cuda_usage.R'
     'data.R'
     'effect_sizes.R'
