--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(backends)
 export(check_fbseq_input)
 export(check_scenario)
 export(constants)
+export(contrast_estimates)
 export(disperse_starts)
 export(dispersed_set)
 export(effect_sizes)
