Add runtime attribute to output of fbseq.
Added the smallchain function too.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(samplers)
 export(scenario_heterosis_model)
 export(setDevice)
 export(single_mcmc)
+export(smallchain)
 export(special_beta_priors)
 exportClasses(Chain)
 exportClasses(Configs)
