--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,3 +48,12 @@ import(methods)
 importFrom(actuar,qinvgamma)
 importFrom(parallel,mclapply)
 importFrom(reshape2,melt)
+importFrom(stats,qnorm)
+importFrom(stats,rexp)
+importFrom(stats,rgamma)
+importFrom(stats,rnorm)
+importFrom(stats,rpois)
+importFrom(stats,rt)
+importFrom(stats,runif)
+importFrom(stats,var)
+importFrom(utils,data)
